src/test/ui/inference/cannot-infer-async-enabled-impl-trait-bindings.stderr
warning: the feature `impl_trait_in_bindings` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/cannot-infer-async-enabled-impl-trait-bindings.rs:2:12
   |
LL | #![feature(impl_trait_in_bindings)]
   |            ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63065 <https://github.com/rust-lang/rust/issues/63065> for more information

error[E0282]: type annotations needed for `impl Future`
  --> $DIR/cannot-infer-async-enabled-impl-trait-bindings.rs:15:9
   |
LL |     let fut = async {
   |         --- consider giving `fut` the explicit type `impl Future`, where the type parameter `E` is specified
...
LL |         Ok(())
   |         ^^ cannot infer type for type parameter `E` declared on the enum `Result`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0282`.
